[upd] use xbmcvfs.translatePath if available, clean up for Kodi 19

6.8.4
[fix] next page now ignores sorting, remains at the end of the directory
[fix] searching, no longer require remote safe search
[fix] notifications for some languages
[chg] only log http server ping failures
[lang] zh_cn strings |contrib: yureng, xiaojun|

6.8.3
[fix] playback of some videos
[fix] notifications for some languages |contrib: Mutronics|
[fix] fix rating videos causing and error even though it succeeded
[upd] cache javascript player url for4 hours, reduces http requests per play by 1
[upd] use new settings format on Kodi 19
[lang] el_gr strings |contrib: twilight0|
[lang] hu_hu strings |contrib: thelacesz|

6.8.2
[fixup] recommendations with > 50 channels

6.8.1
[fix] playback failing
[fix] viewing comments when logged in
[fix] intermittent issue with Subscriptions
[fix] encoding of video unavailable messages
[upd] updates to recommendations
[upd] update logging for Kodi 19
[lang] fr_fr strings |contrib: alan7000|
[lang] pl_pl strings |contrib: drrak|
[lang] nl_nl strings |contrib: Markman-B|

6.8.0
[add] support for video comments, Comments in the More... dialog |contrib: doko-desuka|
[add] simulate deprecated recommended home API |contrib: hedleyroos|
[fix] error caused by timestamp formatting
[fix] fix Premiere's exiting after 5 seconds |contrib: jpfox156|
[fix] playlists over json-rpc |contrib: JasperE84|
[lang] de_de strings |contrib: tweimer|
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|
[lang] pt_pt strings |contrib: daniel3x|

6.7.0
[add] send PlaybackInit, PlaybackStarted, PlaybackStopped notifications containing video id, channel id, and the status of the playing video
[fix] allow playback regardless of API status
    - fixes playback for strm, playlists, other add-ons, and sharing videos from devices
[fix] finding player config, allow playback to continue when not found if possible